Solved overflowing text problems

--- a/sdm-website/styles/Presentation.module.css
+++ b/sdm-website/styles/Presentation.module.css
@@ -4,7 +4,6 @@
 
 .presentation__main_wrapper {
     margin: 10% auto;
-    width: 65%;
     overflow: auto;
 }
 
